﻿drkns 24.08.2014 18:51:17 +0200 - build 4066

1. Рефакторинг.

drkns 23.08.2014 22:57:24 +0200 - build 4065

1. Опечатка в 3542, приводившая к невидимости каталогов вида ".?" при определённых обстоятельствах.

2. clang warning.

drkns 23.08.2014 17:09:59 +0200 - build 4064

1. Большая пачка переименований: ибавляемся от перекрытий имён и связанных с этим предупреждений анализаторов и VS 14.

svs 21.08.2014 15:07:45 +0400 - build 4063

1. SQLite 3.8.6

drkns 21.08.2014 02:09:09 +0200 - build 4062

1. Как выяснилось, используемая реализация regex'ов не очень thread safe.
   Как следствие, всё могло причудливо падать, если во время поиска не ограничиваться созерцанием экрана. Особенно в дебаге.
   Попробуем исправить.

zg 21.08.2014 01:26:03 +0200 - build 4061

1. переделан запуск модальных окон.

2. просмотр не удаляется во время обработки VE_GOTFOCUS/VE_KILLFOCUS.

drkns 21.08.2014 00:45:30 +0200 - build 4060

1. Выкинем немного недоразумений из help.?pp.

2. Добавим ассертов и константности.

2. Прочий рефакторинг.

zg 19.08.2014 22:40:41 +0200 - build 4059

1. упрощение установки текущей макрообласти.

zg 18.08.2014 20:22:56 +0200 - build 4058

1. уточнение 4011: падал поиск регэкспов с (?=pattern) и (?!pattern).

zg 18.08.2014 19:26:05 +0200 - build 4057

1. уточнение 4053: если после нескольких правильно набранных символов набрать один неправильный
   (отсутствующий в имени) - строка быстрого поиска очищается.

zg 17.08.2014 23:36:15 +0200 - build 4056

1. падение при отрисовки тени диалога за пределами экрана.

drkns 17.08.2014 21:15:50 +0200 - build 4055

1. Поддержка elevation при получении полного/свободного размера диска.

drkns 17.08.2014 00:53:51 +0200 - build 4054

1. Уточнение 4052.

zg 16.08.2014 22:08:40 +0200 - build 4053

1. быстрый поиск в панелях - честное окно.

drkns 16.08.2014 20:39:09 +0200 - build 4052

1. Вынесем из оконного менеджера обработку тех клавиш, которых там не должно быть по определению.
