@@ -1,4 +1,8 @@
-﻿drkns 24.08.2014 18:51:17 +0200 - build 4066
+﻿drkns 25.08.2014 00:30:14 +0200 - build 4067
+
+1. Уточнение 4064.
+
+drkns 24.08.2014 18:51:17 +0200 - build 4066
 
 1. Рефакторинг.
 
